--- a/trac/ticket/templates/query.html
+++ b/trac/ticket/templates/query.html
@@ -183,7 +183,7 @@
         initializeFilters();
       </script>
 
-      <xi:include href="query_div.html" />
+      <xi:include href="query_results.html" />
 
       <div class="buttons" py:with="edit = report and 'REPORT_MODIFY' in req.perm;
                      new = 'REPORT_CREATE' in req.perm">
