--- a/trac/ticket/templates/milestone_delete.html
+++ b/trac/ticket/templates/milestone_delete.html
@@ -30,7 +30,7 @@
       <label for="target">Retarget associated tickets to milestone</label>
       <select name="target" id="target">
         <option value="">None</option>
-        <option py:for="name in milestones">${name}</option>
+        <option py:for="m in milestones">${m.name}</option>
       </select>
       <div class="buttons">
        <input type="submit" name="cancel" value="Cancel" />
