--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -24,7 +24,7 @@
       <p>Trac is a web-based software project management and bug/issue
         tracking system emphasizing ease of use and low ceremony.
         It provides an integrated Wiki, an interface to version control
-        systems, and a number convenient ways to stay on top of events
+        systems, and a number of convenient ways to stay on top of events
         and changes within a project.
       </p>
       <p>Trac is distributed under the modified BSD License.<br />
