--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -19,16 +19,21 @@
       </py:choose>
     </title>
     <script type="text/javascript" src="${chrome.htdocs_location}js/wikitoolbar.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript" py:choose="">
       $(document).ready(function() {
-        $("#changelog h3.change").addAnchor("Link to this change");
         $("div.description").find("h1,h2,h3,h4,h5,h6").addAnchor("Link to this section");
+      <py:when test="ticket.id">
+        $("#changelog h3.change").addAnchor("Link to this change");
         function updateActionFields() {
           $("#resolve_choice").enable($("#resolve").checked());
           $("#reassign_choice").enable($("#reassign").checked());
         }
         $("#action input[@name='action']").click(updateActionFields);
         updateActionFields();
+      </py:when>
+      <py:otherwise>
+        $(document).ready(function() {$("#field-summary").get(0).focus()});
+      </py:otherwise>
       });
     </script>
   </head>
