--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -240,7 +240,7 @@
                   <label for="author">Your email or username:</label><br />
                 </th>
                 <td>
-                  <input type="text" id="author" name="author" size="40" value="${ticket.reporter}" />
+                  <input type="text" id="author" name="author" size="40" value="$author_id" />
                   <br />
                 </td>
               </tr>
