--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -93,7 +93,7 @@
                 ${ticket.summary}
               </py:when>
               <py:otherwise>
-                <i>(ticket summary)</i>
+                <div class="system-message">ticket summary missing</div>
               </py:otherwise>
             </py:choose>
           </h2>
