--- a/trac/admin/templates/admin_versions.html
+++ b/trac/admin/templates/admin_versions.html
@@ -13,7 +13,7 @@
     <h2>Manage Versions</h2>
 
     <py:choose>
-      <form py:when="version" class="mod" id="modver" method="post">
+      <form py:when="defined('version')" class="mod" id="modver" method="post">
         <fieldset>
           <legend>Modify Version:</legend>
           <div class="field">
